; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/extr_delegation.c_nfs4_server_rebooted.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/extr_delegation.c_nfs4_server_rebooted.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs_client = type { i32 }

@NFS4CLNT_CHECK_LEASE = common dso_local global i32 0, align 4
@NFS4CLNT_LEASE_EXPIRED = common dso_local global i32 0, align 4
@NFS4CLNT_SESSION_RESET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nfs_client*)* @nfs4_server_rebooted to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nfs4_server_rebooted(%struct.nfs_client* %0) #0 {
  %2 = alloca %struct.nfs_client*, align 8
  store %struct.nfs_client* %0, %struct.nfs_client** %2, align 8
  %3 = load %struct.nfs_client*, %struct.nfs_client** %2, align 8
  %4 = getelementptr inbounds %struct.nfs_client, %struct.nfs_client* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @NFS4CLNT_CHECK_LEASE, align 4
  %7 = call i32 @BIT(i32 %6)
  %8 = load i32, i32* @NFS4CLNT_LEASE_EXPIRED, align 4
  %9 = call i32 @BIT(i32 %8)
  %10 = or i32 %7, %9
  %11 = load i32, i32* @NFS4CLNT_SESSION_RESET, align 4
  %12 = call i32 @BIT(i32 %11)
  %13 = or i32 %10, %12
  %14 = and i32 %5, %13
  %15 = icmp ne i32 %14, 0
  %16 = zext i1 %15 to i32
  ret i32 %16
}

declare dso_local i32 @BIT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
